First stabs at API. And git.

--- a/web/buildout.cfg
+++ b/web/buildout.cfg
@@ -15,11 +15,12 @@ parts =
     zope_conf_deploy
     zpasswd
     interactive_debugger
+    omelette
 versions = versions
 extensions += buildout.dumppickedversions
 
 [versions]
-# Override versions here.
+collective.recipe.omelette = 0.10
 
 [app]
 recipe = z3c.recipe.scripts
@@ -105,12 +106,6 @@ entry-points =
   interactive_debugger=grokcore.startup.startup:interactive_debug_prompt
 arguments = zope_conf="${zope_conf_debug:output}"
 
-# The [data] and [log] parts are still in here to instruct buildout to not
-# unintentionally throw away the parts/data and parts/log subdirectories
-# that contain the Data.fs and the log files. These files should be
-# copied to the new locations. See the upgrade notes for more information.
-[data]
-recipe = zc.recipe.filestorage
-
-[log]
-recipe = zc.recipe.filestorage
+[omelette]
+recipe = collective.recipe.omelette
+eggs = cashpad
