Move admin to buildout.cfg

--- a/web/buildout.cfg
+++ b/web/buildout.cfg
@@ -38,6 +38,11 @@ arguments = serve ${buildout:parts-directory}/etc/deploy.ini
     --daemon --pid-file=${buildout:directory}/var/daemon.pid
     --log-file=${buildout:directory}/log/daemon.log
 
+[admin_credentials]
+username = admin
+password = admin
+manager = Plain Text
+
 [paster_ini_debug]
 recipe = collective.recipe.template
 input = etc/debug.ini.in
