Improved MainView.xib

--- a/ipad/CashRegister-Info.plist
+++ b/ipad/CashRegister-Info.plist
@@ -30,6 +30,8 @@
 	<string>UIInterfaceOrientationLandscapeLeft</string>
 	<key>UIApplicationExitsOnSuspend</key>
 	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
