Prepare for UI and selenium.

--- a/web/buildout.cfg
+++ b/web/buildout.cfg
@@ -16,11 +16,22 @@ parts =
     zpasswd
     interactive_debugger
     omelette
+    seleniumrc
 versions = versions
+allow-picked-versions = false
 extensions += buildout.dumppickedversions
 
 [versions]
 collective.recipe.omelette = 0.10
+js.jquery_tablesorter = 2.0.5
+js.jquery = 1.4.4
+js.jquery-metadata = 2.1
+js.jquery-tablesorter = 2.0.5
+python-dateutil = 1.5
+gocept.selenium = 0.10.1
+selenium = 1.0.3
+collective.recipe.seleniumrc = 0.5
+hexagonit.recipe.download = 1.5.0
 
 [app]
 recipe = z3c.recipe.scripts
@@ -71,7 +82,7 @@ output = ${buildout:parts-directory}/etc/site.zcml
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = cashpad
+eggs = cashpad[test]
 defaults = ['-v']
 
 [zope_conf]
@@ -114,3 +125,8 @@ arguments = zope_conf="${zope_conf_debug:output}"
 [omelette]
 recipe = collective.recipe.omelette
 eggs = cashpad
+
+[seleniumrc]
+recipe = collective.recipe.seleniumrc >= 0.4
+url = http://selenium.googlecode.com/files/selenium-remote-control-1.0.3.zip
+md5sum = 8935cc7fe4dde2fd2a95ddd818e7493b
