--- a/web/buildout.cfg
+++ b/web/buildout.cfg
@@ -32,6 +32,7 @@ gocept.selenium = 0.10.1
 selenium = 1.0.3
 collective.recipe.seleniumrc = 0.5
 hexagonit.recipe.download = 1.5.0
+z3c.recipe.usercrontab = 1.1
 
 [app]
 recipe = z3c.recipe.scripts
