Add symlink to docs. Update versions.

--- a/web/buildout.cfg
+++ b/web/buildout.cfg
@@ -17,21 +17,23 @@ parts =
     interactive_debugger
     omelette
     seleniumrc
+    symlink-docs
 versions = versions
 allow-picked-versions = false
 extensions += buildout.dumppickedversions
 
 [versions]
 collective.recipe.omelette = 0.10
-js.jquery_tablesorter = 2.0.5
+collective.recipe.seleniumrc = 0.5
+gocept.selenium = 0.10.1
+hexagonit.recipe.download = 1.5.0
 js.jquery = 1.4.4
 js.jquery-metadata = 2.1
 js.jquery-tablesorter = 2.0.5
+js.jquery_tablesorter = 2.0.5
 python-dateutil = 1.5
-gocept.selenium = 0.10.1
 selenium = 1.0.3
-collective.recipe.seleniumrc = 0.5
-hexagonit.recipe.download = 1.5.0
+svetlyak40wt.recipe.symlinks = 0.2.0
 z3c.recipe.usercrontab = 1.1
 
 [app]
@@ -131,3 +133,8 @@ eggs = cashpad
 recipe = collective.recipe.seleniumrc >= 0.4
 url = http://selenium.googlecode.com/files/selenium-remote-control-1.0.3.zip
 md5sum = 8935cc7fe4dde2fd2a95ddd818e7493b
+
+[symlink-docs]
+recipe = svetlyak40wt.recipe.symlinks
+path = src/cashpad/browser/static/docs
+files = ${buildout:directory}/../docs/_build/html
