--- a/web/deploy.cfg
+++ b/web/deploy.cfg
@@ -17,6 +17,7 @@ recipe = collective.recipe.template
 input = ${buildout:directory}/etc/${apacheconf:domain}.apache.conf.in
 output = ${buildout:parts-directory}/etc/${apacheconf:domain}.apache.conf
 domain = www.ipadkassasysteem.nl
+domain2 = www.ipad2cashregister.com
 site_id = cashpad
 backend = http://${paster_ini_deploy:host}:${paster_ini_deploy:port}
 
